Updating tracker via automation

--- a/tracker.html
+++ b/tracker.html
@@ -6,8 +6,8 @@
 <script src='js/jquery.js'></script>
 <script src='js/script.js'></script>
 <img src="banner.png" alt="PST TIME EVENT">
-<h3 value="utc" onClick="swapTime(event)">as of 2023/05/06 03:03:50 AM UTC</h3>
-<h4>as of 2023/05/06 03:03:50 AM UTC</h3>
+<h3 value="utc" onClick="swapTime(event)">as of 2023/05/06 04:03:50 AM UTC</h3>
+<h4>as of 2023/05/06 04:03:50 AM UTC</h3>
 <div>Times are tracked and claimed automatically.<br>Post in the <a href='https://www.playstationtrophies.org/forum/topic/334336-wait-a-minute-~-discussion/'>discussion thread</a> if you see any discrepancies and for further rules.</div><br>
 <div id="goal-count"><table><thead><tr class='percentageFill'><th>Current</th><th>Remaining</th><th>Progress</th></tr></thead>
 <tbody><tr class='percentageFill'><td>861</td><td>579</td><td id="goalPercentage">59.79%</td></tr></tbody></table></div><br>
@@ -1661,7 +1661,7 @@
 <tr><td>23:13 </td><td>wrestlefanatic77</td><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17615">17615</a></td><td style="text-align: right;">   98.81</td></tr>
 <tr><td>23:14 </td><td>wrestlefanatic77</td><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17616">17616</a></td><td style="text-align: right;">   99.04</td></tr>
 <tr><td>23:15 </td><td>wrestlefanatic77</td><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17617">17617</a></td><td style="text-align: right;">   99.04</td></tr>
-<tr><td>23:16 </td><td>wrestlefanatic77</td><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17618">17618</a></td><td style="text-align: right;">   98.73</td></tr>
+<tr><td>23:16 </td><td>lion1325478     </td><td><a href="https://www.playstationtrophies.org/profiles/lion1325478/log?id=11964">11964</a>     </td><td style="text-align: right;">   58.52</td></tr>
 <tr><td>23:17 </td><td>wrestlefanatic77</td><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17619">17619</a></td><td style="text-align: right;">   98.81</td></tr>
 <tr><td>23:18 </td><td>wrestlefanatic77</td><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17620">17620</a></td><td style="text-align: right;">   98.57</td></tr>
 <tr><td>23:19 </td><td>mattigummi45    </td><td><a href="https://www.playstationtrophies.org/profiles/mattigummi45/log?id=12786">12786</a>    </td><td style="text-align: right;">   75.03</td></tr>
@@ -1672,7 +1672,7 @@
 <tr><td>23:24 </td><td>Darth_Krid      </td><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30449">30449</a>      </td><td style="text-align: right;">   17.04</td></tr>
 <tr><td>23:25 </td><td>Blood_Velvet    </td><td><a href="https://www.playstationtrophies.org/profiles/Blood_Velvet/log?id=23359">23359</a>    </td><td style="text-align: right;">    4   </td></tr>
 <tr><td>23:26 </td><td>wrestlefanatic77</td><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17625">17625</a></td><td style="text-align: right;">   98.96</td></tr>
-<tr><td>23:27 </td><td>wrestlefanatic77</td><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17626">17626</a></td><td style="text-align: right;">   98.65</td></tr>
+<tr><td>23:27 </td><td>lion1325478     </td><td><a href="https://www.playstationtrophies.org/profiles/lion1325478/log?id=11965">11965</a>     </td><td style="text-align: right;">   56.74</td></tr>
 <tr><td>23:28 </td><td>wrestlefanatic77</td><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17627">17627</a></td><td style="text-align: right;">   98.81</td></tr>
 <tr><td>23:32 </td><td>mattigummi45    </td><td><a href="https://www.playstationtrophies.org/profiles/mattigummi45/log?id=12787">12787</a>    </td><td style="text-align: right;">   66.63</td></tr>
 <tr><td>23:33 </td><td>wrestlefanatic77</td><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17630">17630</a></td><td style="text-align: right;">   98.01</td></tr>
@@ -1697,7 +1697,7 @@
 <tbody>
 <tr><td>Dino_Roar       </td><td style="text-align: right;">    108</td></tr>
 <tr><td>Martz4040       </td><td style="text-align: right;">     61</td></tr>
-<tr><td>wrestlefanatic77</td><td style="text-align: right;">     57</td></tr>
+<tr><td>wrestlefanatic77</td><td style="text-align: right;">     55</td></tr>
 <tr><td>staytrue1985    </td><td style="text-align: right;">     53</td></tr>
 <tr><td>mattigummi45    </td><td style="text-align: right;">     50</td></tr>
 <tr><td>Zetberg         </td><td style="text-align: right;">     47</td></tr>
@@ -1721,8 +1721,8 @@
 <tr><td>diskdocx        </td><td style="text-align: right;">     12</td></tr>
 <tr><td>Lion_Squid      </td><td style="text-align: right;">     10</td></tr>
 <tr><td>Road2unner      </td><td style="text-align: right;">      9</td></tr>
+<tr><td>lion1325478     </td><td style="text-align: right;">      8</td></tr>
 <tr><td>slammajamma28   </td><td style="text-align: right;">      7</td></tr>
-<tr><td>lion1325478     </td><td style="text-align: right;">      6</td></tr>
 <tr><td>clayser         </td><td style="text-align: right;">      6</td></tr>
 <tr><td>stgermain       </td><td style="text-align: right;">      5</td></tr>
 <tr><td>Ryukori_        </td><td style="text-align: right;">      4</td></tr>
@@ -1749,7 +1749,7 @@
 <button onclick="showUser(event, 'Eticket109')">Eticket109 - 0</button><br>
 <button onclick="showUser(event, 'Hemming87')">Hemming87 - 33</button><br>
 <button onclick="showUser(event, 'Jerry_Appleby')">Jerry_Appleby - 24</button><br>
-<button onclick="showUser(event, 'lion1325478')">lion1325478 - 11</button><br>
+<button onclick="showUser(event, 'lion1325478')">lion1325478 - 13</button><br>
 <button onclick="showUser(event, 'Lion_Squid')">Lion_Squid - 14</button><br>
 <button onclick="showUser(event, 'Martz4040')">Martz4040 - ✅</button><br>
 <button onclick="showUser(event, 'mattigummi45')">mattigummi45 - 43</button><br>
@@ -2810,7 +2810,7 @@
 <tr><td>MISSING                                                                                  </td><td>MISSING </td><td style="text-align: right;">       11</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/lion1325478/log?id=11953">11953</a></td><td>54.67   </td><td style="text-align: right;">       12</td></tr>
 <tr><td>MISSING                                                                                  </td><td>MISSING </td><td style="text-align: right;">       13</td></tr>
-<tr><td>MISSING                                                                                  </td><td>MISSING </td><td style="text-align: right;">       14</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/lion1325478/log?id=11965">11965</a></td><td>56.74   </td><td style="text-align: right;">       14</td></tr>
 <tr><td>MISSING                                                                                  </td><td>MISSING </td><td style="text-align: right;">       15</td></tr>
 <tr><td>MISSING                                                                                  </td><td>MISSING </td><td style="text-align: right;">       16</td></tr>
 <tr><td>MISSING                                                                                  </td><td>MISSING </td><td style="text-align: right;">       17</td></tr>
@@ -2848,7 +2848,7 @@
 <tr><td>MISSING                                                                                  </td><td>MISSING </td><td style="text-align: right;">       49</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/lion1325478/log?id=11950">11950</a></td><td>57.70   </td><td style="text-align: right;">       50</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/lion1325478/log?id=11954">11954</a></td><td>74.52   </td><td style="text-align: right;">       51</td></tr>
-<tr><td>MISSING                                                                                  </td><td>MISSING </td><td style="text-align: right;">       52</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/lion1325478/log?id=11964">11964</a></td><td>58.52   </td><td style="text-align: right;">       52</td></tr>
 <tr><td>MISSING                                                                                  </td><td>MISSING </td><td style="text-align: right;">       53</td></tr>
 <tr><td>MISSING                                                                                  </td><td>MISSING </td><td style="text-align: right;">       54</td></tr>
 <tr><td>MISSING                                                                                  </td><td>MISSING </td><td style="text-align: right;">       55</td></tr>
