Updating tracker via automation

--- a/tracker.html
+++ b/tracker.html
@@ -6,11 +6,11 @@
 <script src='js/jquery.js'></script>
 <script src='js/script.js'></script>
 <img src="banner.png" alt="PST TIME EVENT">
-<h3 value="utc" onClick="swapTime(event)">as of 2023/05/06 07:03:50 AM UTC</h3>
-<h4>as of 2023/05/06 07:03:50 AM UTC</h3>
+<h3 value="utc" onClick="swapTime(event)">as of 2023/05/06 08:03:50 AM UTC</h3>
+<h4>as of 2023/05/06 08:03:50 AM UTC</h3>
 <div>Times are tracked and claimed automatically.<br>Post in the <a href='https://www.playstationtrophies.org/forum/topic/334336-wait-a-minute-~-discussion/'>discussion thread</a> if you see any discrepancies and for further rules.</div><br>
 <div id="goal-count"><table><thead><tr class='percentageFill'><th>Current</th><th>Remaining</th><th>Progress</th></tr></thead>
-<tbody><tr class='percentageFill'><td>913</td><td>527</td><td id="goalPercentage">63.4%</td></tr></tbody></table></div><br>
+<tbody><tr class='percentageFill'><td>914</td><td>526</td><td id="goalPercentage">63.47%</td></tr></tbody></table></div><br>
 <div class="tab"><button class="tablinks active" onclick="openTab(event, 'remaining')">Remaining</button>
 <button class="tablinks" onclick="openTab(event, 'claimed')">Claimed</button>
 <button class="tablinks" onclick="openTab(event, 'leaderboard')">LB</button>
@@ -25,7 +25,7 @@
 <td id='cell_4' class='sum_cell ' onClick="showHourSummary(event, 'hour_4')">Hour 04: 39</td>
 <td id='cell_5' class='sum_cell ' onClick="showHourSummary(event, 'hour_5')">Hour 05: 40</td></tr>
 <tr><td id='cell_6' class='sum_cell ' onClick="showHourSummary(event, 'hour_6')">Hour 06: 34</td>
-<td id='cell_7' class='sum_cell ' onClick="showHourSummary(event, 'hour_7')">Hour 07: 52</td>
+<td id='cell_7' class='sum_cell ' onClick="showHourSummary(event, 'hour_7')">Hour 07: 51</td>
 <td id='cell_8' class='sum_cell ' onClick="showHourSummary(event, 'hour_8')">Hour 08: 32</td>
 <td id='cell_9' class='sum_cell ' onClick="showHourSummary(event, 'hour_9')">Hour 09: 30</td>
 <td id='cell_10' class='sum_cell ' onClick="showHourSummary(event, 'hour_10')">Hour 10: 17</td>
@@ -346,7 +346,6 @@
 <tr><td>07:47</tr></td>
 <tr><td>07:48</tr></td>
 <tr><td>07:49</tr></td>
-<tr><td>07:50</tr></td>
 <tr><td>07:51</tr></td>
 <tr><td>07:52</tr></td>
 <tr><td>07:53</tr></td>
@@ -1000,9 +999,10 @@
 <tr><td>06:59 </td><td>Martz4040       </td><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13271">13271</a>       </td><td style="text-align: right;">   95.18</td></tr>
 <tr><td>07:27 </td><td>Asher1985       </td><td><a href="https://www.playstationtrophies.org/profiles/Asher1985/log?id=11377">11377</a>       </td><td style="text-align: right;">   69.73</td></tr>
 <tr><td>07:33 </td><td>Dolken_swe      </td><td><a href="https://www.playstationtrophies.org/profiles/Dolken_swe/log?id=18896">18896</a>      </td><td style="text-align: right;">   11.35</td></tr>
-<tr><td>07:45 </td><td>R1p3r_5000      </td><td><a href="https://www.playstationtrophies.org/profiles/R1p3r_5000/log?id=18897">18897</a>      </td><td style="text-align: right;">   68.17</td></tr>
+<tr><td>07:45 </td><td>Dolken_swe      </td><td><a href="https://www.playstationtrophies.org/profiles/Dolken_swe/log?id=18922">18922</a>      </td><td style="text-align: right;">   14.13</td></tr>
+<tr><td>07:50 </td><td>Dolken_swe      </td><td><a href="https://www.playstationtrophies.org/profiles/Dolken_swe/log?id=18923">18923</a>      </td><td style="text-align: right;">   21.34</td></tr>
 <tr><td>07:54 </td><td>R1p3r_5000      </td><td><a href="https://www.playstationtrophies.org/profiles/R1p3r_5000/log?id=18889">18889</a>      </td><td style="text-align: right;">   86.97</td></tr>
-<tr><td>07:56 </td><td>Zetberg         </td><td><a href="https://www.playstationtrophies.org/profiles/Zetberg/log?id=28145">28145</a>         </td><td style="text-align: right;">   99.82</td></tr>
+<tr><td>07:56 </td><td>Dolken_swe      </td><td><a href="https://www.playstationtrophies.org/profiles/Dolken_swe/log?id=18924">18924</a>      </td><td style="text-align: right;">   41.68</td></tr>
 <tr><td>07:57 </td><td>Zetberg         </td><td><a href="https://www.playstationtrophies.org/profiles/Zetberg/log?id=28146">28146</a>         </td><td style="text-align: right;">   99.64</td></tr>
 <tr><td>07:58 </td><td>Zetberg         </td><td><a href="https://www.playstationtrophies.org/profiles/Zetberg/log?id=28147">28147</a>         </td><td style="text-align: right;">   99.64</td></tr>
 <tr><td>07:59 </td><td>Zetberg         </td><td><a href="https://www.playstationtrophies.org/profiles/Zetberg/log?id=28148">28148</a>         </td><td style="text-align: right;">   99.58</td></tr>
@@ -1702,19 +1702,19 @@
 <tr><td>staytrue1985    </td><td style="text-align: right;">     53</td></tr>
 <tr><td>mattigummi45    </td><td style="text-align: right;">     50</td></tr>
 <tr><td>danc97-         </td><td style="text-align: right;">     46</td></tr>
-<tr><td>Zetberg         </td><td style="text-align: right;">     46</td></tr>
+<tr><td>Zetberg         </td><td style="text-align: right;">     45</td></tr>
 <tr><td>Barra333        </td><td style="text-align: right;">     35</td></tr>
 <tr><td>Jerry_Appleby   </td><td style="text-align: right;">     34</td></tr>
 <tr><td>Darth_Krid      </td><td style="text-align: right;">     31</td></tr>
 <tr><td>THE--ALCHEMlST  </td><td style="text-align: right;">     31</td></tr>
 <tr><td>Hemming87       </td><td style="text-align: right;">     29</td></tr>
-<tr><td>R1p3r_5000      </td><td style="text-align: right;">     28</td></tr>
+<tr><td>R1p3r_5000      </td><td style="text-align: right;">     27</td></tr>
 <tr><td>Xemik           </td><td style="text-align: right;">     23</td></tr>
 <tr><td>daco_1979       </td><td style="text-align: right;">     23</td></tr>
 <tr><td>Da-Eastside     </td><td style="text-align: right;">     22</td></tr>
+<tr><td>Dolken_swe      </td><td style="text-align: right;">     21</td></tr>
 <tr><td>SWEDISH_PIRATE  </td><td style="text-align: right;">     21</td></tr>
 <tr><td>XxDecieverxX    </td><td style="text-align: right;">     18</td></tr>
-<tr><td>Dolken_swe      </td><td style="text-align: right;">     18</td></tr>
 <tr><td>VazzVegas       </td><td style="text-align: right;">     15</td></tr>
 <tr><td>sum1_worsethan_u</td><td style="text-align: right;">     15</td></tr>
 <tr><td>diskdocx        </td><td style="text-align: right;">     12</td></tr>
@@ -1744,7 +1744,7 @@
 <button onclick="showUser(event, 'Darth_Krid')">Darth_Krid - 53</button><br>
 <button onclick="showUser(event, 'Dino_Roar')">Dino_Roar - ✅</button><br>
 <button onclick="showUser(event, 'diskdocx')">diskdocx - 16</button><br>
-<button onclick="showUser(event, 'Dolken_swe')">Dolken_swe - 26</button><br>
+<button onclick="showUser(event, 'Dolken_swe')">Dolken_swe - 28</button><br>
 <button onclick="showUser(event, 'ejesbd')">ejesbd - 0</button><br>
 <button onclick="showUser(event, 'Eticket109')">Eticket109 - 0</button><br>
 <button onclick="showUser(event, 'Hemming87')">Hemming87 - 33</button><br>
@@ -2477,7 +2477,7 @@
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Dolken_swe/log?id=18909">18909</a></td><td>92.11   </td><td style="text-align: right;">       18</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       19</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       20</td></tr>
-<tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       21</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/Dolken_swe/log?id=18923">18923</a></td><td>21.34   </td><td style="text-align: right;">       21</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Dolken_swe/log?id=18905">18905</a></td><td>92.85   </td><td style="text-align: right;">       22</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       23</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       24</td></tr>
@@ -2496,7 +2496,7 @@
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Dolken_swe/log?id=18891">18891</a></td><td>46.90   </td><td style="text-align: right;">       37</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       38</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       39</td></tr>
-<tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       40</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/Dolken_swe/log?id=18922">18922</a></td><td>14.13   </td><td style="text-align: right;">       40</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Dolken_swe/log?id=18904">18904</a></td><td>93.50   </td><td style="text-align: right;">       41</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Dolken_swe/log?id=18887">18887</a></td><td>87.30   </td><td style="text-align: right;">       42</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Dolken_swe/log?id=18900">18900</a></td><td>12.32   </td><td style="text-align: right;">       43</td></tr>
