Updating tracker via automation

--- a/tracker.html
+++ b/tracker.html
@@ -6,11 +6,11 @@
 <script src='js/jquery.js'></script>
 <script src='js/script.js'></script>
 <img src="banner.png" alt="PST TIME EVENT">
-<h3 value="utc" onClick="swapTime(event)">as of 2023/05/06 08:03:50 PM UTC</h3>
-<h4>as of 2023/05/06 08:03:50 PM UTC</h3>
+<h3 value="utc" onClick="swapTime(event)">as of 2023/05/06 09:03:50 PM UTC</h3>
+<h4>as of 2023/05/06 09:03:50 PM UTC</h3>
 <div>Times are tracked and claimed automatically.<br>Post in the <a href='https://www.playstationtrophies.org/forum/topic/334336-wait-a-minute-~-discussion/'>discussion thread</a> if you see any discrepancies and for further rules.</div><br>
 <div id="goal-count"><table><thead><tr class='percentageFill'><th>Current</th><th>Remaining</th><th>Progress</th></tr></thead>
-<tbody><tr class='percentageFill'><td>50</td><td>1390</td><td id="goalPercentage">3.47%</td></tr></tbody></table></div><br>
+<tbody><tr class='percentageFill'><td>45</td><td>1395</td><td id="goalPercentage">3.12%</td></tr></tbody></table></div><br>
 <div class="tab"><button class="tablinks active" onclick="openTab(event, 'remaining')">Remaining</button>
 <button class="tablinks" onclick="openTab(event, 'claimed')">Claimed</button>
 <button class="tablinks" onclick="openTab(event, 'leaderboard')">LB</button>
@@ -19,9 +19,9 @@
 <h2>REMAINING TIMES</h2>
 <div id="hourly_total_summary"><table><tbody>
 <tr><td id='cell_0' class='sum_cell ' onClick="showHourSummary(event, 'hour_0')">Hour 00: 55</td>
-<td id='cell_1' class='sum_cell ' onClick="showHourSummary(event, 'hour_1')">Hour 01: 45</td>
-<td id='cell_2' class='sum_cell ' onClick="showHourSummary(event, 'hour_2')">Hour 02: 50</td>
-<td id='cell_3' class='sum_cell ' onClick="showHourSummary(event, 'hour_3')">Hour 03: 59</td>
+<td id='cell_1' class='sum_cell ' onClick="showHourSummary(event, 'hour_1')">Hour 01: 46</td>
+<td id='cell_2' class='sum_cell ' onClick="showHourSummary(event, 'hour_2')">Hour 02: 53</td>
+<td id='cell_3' class='sum_cell ' onClick="showHourSummary(event, 'hour_3')">Hour 03: 60</td>
 <td id='cell_4' class='sum_cell ' onClick="showHourSummary(event, 'hour_4')">Hour 04: 57</td>
 <td id='cell_5' class='sum_cell ' onClick="showHourSummary(event, 'hour_5')">Hour 05: 60</td></tr>
 <tr><td id='cell_6' class='sum_cell ' onClick="showHourSummary(event, 'hour_6')">Hour 06: 60</td>
@@ -144,6 +144,7 @@
 <tr><td>01:33</tr></td>
 <tr><td>01:34</tr></td>
 <tr><td>01:36</tr></td>
+<tr><td>01:37</tr></td>
 <tr><td>01:38</tr></td>
 <tr><td>01:40</tr></td>
 <tr><td>01:41</tr></td>
@@ -194,6 +195,7 @@
 <tr><td>02:33</tr></td>
 <tr><td>02:34</tr></td>
 <tr><td>02:35</tr></td>
+<tr><td>02:36</tr></td>
 <tr><td>02:37</tr></td>
 <tr><td>02:38</tr></td>
 <tr><td>02:39</tr></td>
@@ -207,6 +209,7 @@
 <tr><td>02:47</tr></td>
 <tr><td>02:48</tr></td>
 <tr><td>02:49</tr></td>
+<tr><td>02:50</tr></td>
 <tr><td>02:51</tr></td>
 <tr><td>02:52</tr></td>
 <tr><td>02:53</tr></td>
@@ -214,6 +217,7 @@
 <tr><td>02:55</tr></td>
 <tr><td>02:56</tr></td>
 <tr><td>02:57</tr></td>
+<tr><td>02:58</tr></td>
 <tr><td>02:59</tr></td>
 </tbody>
 </table>
@@ -229,6 +233,7 @@
 <tr><td>03:03</tr></td>
 <tr><td>03:04</tr></td>
 <tr><td>03:05</tr></td>
+<tr><td>03:06</tr></td>
 <tr><td>03:07</tr></td>
 <tr><td>03:08</tr></td>
 <tr><td>03:09</tr></td>
@@ -1645,7 +1650,6 @@
 <tr><td>01:28 </td><td>Barra333 </td><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3671">3671</a>   </td><td style="text-align: right;">   72.65</td></tr>
 <tr><td>01:30 </td><td>Barra333 </td><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3672">3672</a>   </td><td style="text-align: right;">   71.58</td></tr>
 <tr><td>01:35 </td><td>Barra333 </td><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3673">3673</a>   </td><td style="text-align: right;">   74.27</td></tr>
-<tr><td>01:37 </td><td>Barra333 </td><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3632">3632</a>   </td><td style="text-align: right;">    0.64</td></tr>
 <tr><td>01:39 </td><td>Barra333 </td><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3674">3674</a>   </td><td style="text-align: right;">   70.63</td></tr>
 <tr><td>01:44 </td><td>Barra333 </td><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3675">3675</a>   </td><td style="text-align: right;">   70.57</td></tr>
 <tr><td>01:46 </td><td>Barra333 </td><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3676">3676</a>   </td><td style="text-align: right;">   70.74</td></tr>
@@ -1662,10 +1666,6 @@
 <tr><td>02:17 </td><td>Barra333 </td><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3636">3636</a>   </td><td style="text-align: right;">   58.44</td></tr>
 <tr><td>02:21 </td><td>Barra333 </td><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3644">3644</a>   </td><td style="text-align: right;">   48.92</td></tr>
 <tr><td>02:30 </td><td>Barra333 </td><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3658">3658</a>   </td><td style="text-align: right;">   94   </td></tr>
-<tr><td>02:36 </td><td>Barra333 </td><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3628">3628</a>   </td><td style="text-align: right;">    2.08</td></tr>
-<tr><td>02:50 </td><td>Barra333 </td><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3629">3629</a>   </td><td style="text-align: right;">    0.97</td></tr>
-<tr><td>02:58 </td><td>Barra333 </td><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3630">3630</a>   </td><td style="text-align: right;">    0.77</td></tr>
-<tr><td>03:06 </td><td>Barra333 </td><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3631">3631</a>   </td><td style="text-align: right;">    0.75</td></tr>
 <tr><td>04:14 </td><td>Barra333 </td><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3679">3679</a>   </td><td style="text-align: right;">   69.67</td></tr>
 <tr><td>04:20 </td><td>Barra333 </td><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3681">3681</a>   </td><td style="text-align: right;">   69   </td></tr>
 <tr><td>04:43 </td><td>Barra333 </td><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3682">3682</a>   </td><td style="text-align: right;">   67.88</td></tr>
@@ -1695,7 +1695,7 @@
 <tr><th>User     </th><th style="text-align: right;">  Count</th></tr>
 </thead>
 <tbody>
-<tr><td>Barra333 </td><td style="text-align: right;">     47</td></tr>
+<tr><td>Barra333 </td><td style="text-align: right;">     42</td></tr>
 <tr><td>Asher1985</td><td style="text-align: right;">      3</td></tr>
 </tbody>
 </table>
@@ -1704,7 +1704,7 @@
 <div class="dropdown"><button class="dropbtn">Select a PSN ID</button>
 <div class="dropdown-content">
 <button onclick="showUser(event, 'Asher1985')">Asher1985 - 3</button><br>
-<button onclick="showUser(event, 'Barra333')">Barra333 - 37</button><br>
+<button onclick="showUser(event, 'Barra333')">Barra333 - 34</button><br>
 <button onclick="showUser(event, 'Blood_Velvet')">Blood_Velvet - 0</button><br>
 <button onclick="showUser(event, 'clayser')">clayser - 0</button><br>
 <button onclick="showUser(event, 'Da-Eastside')">Da-Eastside - 0</button><br>
@@ -1835,7 +1835,7 @@
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3645">3645</a></td><td>98.91   </td><td style="text-align: right;">       19</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3635">3635</a></td><td>61.90   </td><td style="text-align: right;">       20</td></tr>
 <tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       21</td></tr>
-<tr><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3630">3630</a></td><td>0.77    </td><td style="text-align: right;">       22</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       22</td></tr>
 <tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       23</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3657">3657</a></td><td>95.93   </td><td style="text-align: right;">       24</td></tr>
 <tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       25</td></tr>
@@ -1850,14 +1850,14 @@
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3675">3675</a></td><td>70.57   </td><td style="text-align: right;">       34</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3673">3673</a></td><td>74.27   </td><td style="text-align: right;">       35</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3672">3672</a></td><td>71.58   </td><td style="text-align: right;">       36</td></tr>
-<tr><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3632">3632</a></td><td>0.64    </td><td style="text-align: right;">       37</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       37</td></tr>
 <tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       38</td></tr>
 <tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       39</td></tr>
 <tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       40</td></tr>
-<tr><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3629">3629</a></td><td>0.97    </td><td style="text-align: right;">       41</td></tr>
-<tr><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3628">3628</a></td><td>2.08    </td><td style="text-align: right;">       42</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3641">3641</a></td><td>56.28   </td><td style="text-align: right;">       41</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       42</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3664">3664</a></td><td>59.76   </td><td style="text-align: right;">       43</td></tr>
-<tr><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3631">3631</a></td><td>0.75    </td><td style="text-align: right;">       44</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3667">3667</a></td><td>56.91   </td><td style="text-align: right;">       44</td></tr>
 <tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       45</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3649">3649</a></td><td>96.65   </td><td style="text-align: right;">       46</td></tr>
 <tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       47</td></tr>
