--- a/tracker.html
+++ b/tracker.html
@@ -6,8 +6,8 @@
 <script src='js/jquery.js'></script>
 <script src='js/script.js'></script>
 <img src="banner.png" alt="PST TIME EVENT">
-<h3 value="utc" onClick="swapTime(event)">as of 2023/05/07 10:25:33 PM UTC</h3>
-<h4>as of 2023/05/07 10:25:33 PM UTC</h3>
+<h3 value="utc" onClick="swapTime(event)">as of 2023/05/07 11:25:33 PM UTC</h3>
+<h4>as of 2023/05/07 11:25:33 PM UTC</h3>
 <div>Times are tracked and claimed automatically.<br>Post in the <a href='https://www.playstationtrophies.org/forum/topic/334336-wait-a-minute-~-discussion/'>discussion thread</a> if you see any discrepancies and for further rules.</div><br>
 <div id="goal-count"><table><thead><tr class='percentageFill'><th>Current</th><th>Remaining</th><th>Progress</th></tr></thead>
 <tbody><tr class='percentageFill'><td>1072</td><td>368</td><td id="goalPercentage">74.44%</td></tr></tbody></table></div><br>
@@ -994,17 +994,17 @@
 <tr><td>10:34 </td><td>R1p3r_5000      </td><td><a href="https://www.playstationtrophies.org/profiles/R1p3r_5000/log?id=18964">18964</a>      </td><td style="text-align: right;">   44.51</td></tr>
 <tr><td>10:35 </td><td>Dino_Roar       </td><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=139989">139989</a>     </td><td style="text-align: right;">   88.46</td></tr>
 <tr><td>10:36 </td><td>R1p3r_5000      </td><td><a href="https://www.playstationtrophies.org/profiles/R1p3r_5000/log?id=18930">18930</a>      </td><td style="text-align: right;">   26.65</td></tr>
-<tr><td>10:37 </td><td>Dino_Roar       </td><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=139764">139764</a>     </td><td style="text-align: right;">   95.72</td></tr>
+<tr><td>10:37 </td><td>Dino_Roar       </td><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=139764">139764</a>     </td><td style="text-align: right;">   95.97</td></tr>
 <tr><td>10:38 </td><td>danc97-         </td><td><a href="https://www.playstationtrophies.org/profiles/danc97-/log?id=31481">31481</a>         </td><td style="text-align: right;">   14.61</td></tr>
 <tr><td>10:40 </td><td>Dino_Roar       </td><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=139991">139991</a>     </td><td style="text-align: right;">   86.54</td></tr>
 <tr><td>10:42 </td><td>staytrue1985    </td><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14939">14939</a>    </td><td style="text-align: right;">   81.46</td></tr>
 <tr><td>10:43 </td><td>R1p3r_5000      </td><td><a href="https://www.playstationtrophies.org/profiles/R1p3r_5000/log?id=18896">18896</a>      </td><td style="text-align: right;">   69.58</td></tr>
-<tr><td>10:44 </td><td>Dino_Roar       </td><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=139766">139766</a>     </td><td style="text-align: right;">   90.43</td></tr>
+<tr><td>10:44 </td><td>Dino_Roar       </td><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=139766">139766</a>     </td><td style="text-align: right;">   90.68</td></tr>
 <tr><td>10:47 </td><td>R1p3r_5000      </td><td><a href="https://www.playstationtrophies.org/profiles/R1p3r_5000/log?id=18965">18965</a>      </td><td style="text-align: right;">   37.54</td></tr>
 <tr><td>10:48 </td><td>stpatty         </td><td><a href="https://www.playstationtrophies.org/profiles/stpatty/log?id=12238">12238</a>         </td><td style="text-align: right;">   69.24</td></tr>
 <tr><td>10:49 </td><td>staytrue1985    </td><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14940">14940</a>    </td><td style="text-align: right;">   72.61</td></tr>
 <tr><td>10:50 </td><td>R1p3r_5000      </td><td><a href="https://www.playstationtrophies.org/profiles/R1p3r_5000/log?id=18931">18931</a>      </td><td style="text-align: right;">   25.59</td></tr>
-<tr><td>10:52 </td><td>Dino_Roar       </td><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=139769">139769</a>     </td><td style="text-align: right;">   90.18</td></tr>
+<tr><td>10:52 </td><td>Dino_Roar       </td><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=139769">139769</a>     </td><td style="text-align: right;">   90.43</td></tr>
 <tr><td>10:53 </td><td>Dino_Roar       </td><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=139998">139998</a>     </td><td style="text-align: right;">   91.84</td></tr>
 <tr><td>10:54 </td><td>Dino_Roar       </td><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=140000">140000</a>     </td><td style="text-align: right;">   91.84</td></tr>
 <tr><td>10:55 </td><td>mattigummi45    </td><td><a href="https://www.playstationtrophies.org/profiles/mattigummi45/log?id=12788">12788</a>    </td><td style="text-align: right;">   46.77</td></tr>
@@ -1384,7 +1384,7 @@
 <tr><td>18:19 </td><td>R1p3r_5000      </td><td><a href="https://www.playstationtrophies.org/profiles/R1p3r_5000/log?id=18910">18910</a>      </td><td style="text-align: right;">   51.06</td></tr>
 <tr><td>18:20 </td><td>clayser         </td><td><a href="https://www.playstationtrophies.org/profiles/clayser/log?id=9941">9941</a>           </td><td style="text-align: right;">   11.91</td></tr>
 <tr><td>18:21 </td><td>THE--ALCHEMlST  </td><td><a href="https://www.playstationtrophies.org/profiles/THE--ALCHEMlST/log?id=23688">23688</a>  </td><td style="text-align: right;">   68.8 </td></tr>
-<tr><td>18:22 </td><td>Martz4040       </td><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13211">13211</a>       </td><td style="text-align: right;">   98.13</td></tr>
+<tr><td>18:22 </td><td>Meikoro         </td><td><a href="https://www.playstationtrophies.org/profiles/Meikoro/log?id=37261">37261</a>         </td><td style="text-align: right;">   70.15</td></tr>
 <tr><td>18:23 </td><td>Martz4040       </td><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13212">13212</a>       </td><td style="text-align: right;">   98.02</td></tr>
 <tr><td>18:24 </td><td>THE--ALCHEMlST  </td><td><a href="https://www.playstationtrophies.org/profiles/THE--ALCHEMlST/log?id=23659">23659</a>  </td><td style="text-align: right;">   18.07</td></tr>
 <tr><td>18:25 </td><td>daco_1979       </td><td><a href="https://www.playstationtrophies.org/profiles/daco_1979/log?id=31114">31114</a>       </td><td style="text-align: right;">   99.45</td></tr>
@@ -1618,7 +1618,7 @@
 <tr><td>22:35 </td><td>danc97-         </td><td><a href="https://www.playstationtrophies.org/profiles/danc97-/log?id=31466">31466</a>         </td><td style="text-align: right;">   83.15</td></tr>
 <tr><td>22:36 </td><td>danc97-         </td><td><a href="https://www.playstationtrophies.org/profiles/danc97-/log?id=31468">31468</a>         </td><td style="text-align: right;">   89.8 </td></tr>
 <tr><td>22:37 </td><td>VazzVegas       </td><td><a href="https://www.playstationtrophies.org/profiles/VazzVegas/log?id=9872">9872</a>         </td><td style="text-align: right;">   50.18</td></tr>
-<tr><td>22:38 </td><td>danc97-         </td><td><a href="https://www.playstationtrophies.org/profiles/danc97-/log?id=31469">31469</a>         </td><td style="text-align: right;">   91.74</td></tr>
+<tr><td>22:38 </td><td>Road2unner      </td><td><a href="https://www.playstationtrophies.org/profiles/Road2unner/log?id=19131">19131</a>      </td><td style="text-align: right;">   28.33</td></tr>
 <tr><td>22:39 </td><td>mattigummi45    </td><td><a href="https://www.playstationtrophies.org/profiles/mattigummi45/log?id=12783">12783</a>    </td><td style="text-align: right;">   41.51</td></tr>
 <tr><td>22:40 </td><td>Darth_Krid      </td><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30542">30542</a>      </td><td style="text-align: right;">   97.1 </td></tr>
 <tr><td>22:41 </td><td>Darth_Krid      </td><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30544">30544</a>      </td><td style="text-align: right;">   96.99</td></tr>
@@ -1697,8 +1697,8 @@
 <tbody>
 <tr><td>Dino_Roar       </td><td style="text-align: right;">    153</td></tr>
 <tr><td>Velvet_Bee      </td><td style="text-align: right;">     68</td></tr>
-<tr><td>Martz4040       </td><td style="text-align: right;">     61</td></tr>
-<tr><td>danc97-         </td><td style="text-align: right;">     56</td></tr>
+<tr><td>Martz4040       </td><td style="text-align: right;">     60</td></tr>
+<tr><td>danc97-         </td><td style="text-align: right;">     55</td></tr>
 <tr><td>R1p3r_5000      </td><td style="text-align: right;">     55</td></tr>
 <tr><td>wrestlefanatic77</td><td style="text-align: right;">     53</td></tr>
 <tr><td>mattigummi45    </td><td style="text-align: right;">     50</td></tr>
@@ -1725,10 +1725,10 @@
 <tr><td>VazzVegas       </td><td style="text-align: right;">     12</td></tr>
 <tr><td>SWEDISH_PIRATE  </td><td style="text-align: right;">     12</td></tr>
 <tr><td>stgermain       </td><td style="text-align: right;">     10</td></tr>
-<tr><td>Road2unner      </td><td style="text-align: right;">      8</td></tr>
+<tr><td>Road2unner      </td><td style="text-align: right;">      9</td></tr>
 <tr><td>Eticket109      </td><td style="text-align: right;">      5</td></tr>
 <tr><td>Asher1985       </td><td style="text-align: right;">      3</td></tr>
-<tr><td>Meikoro         </td><td style="text-align: right;">      1</td></tr>
+<tr><td>Meikoro         </td><td style="text-align: right;">      2</td></tr>
 </tbody>
 </table>
 </div>
@@ -1753,9 +1753,9 @@
 <button onclick="showUser(event, 'Lion_Squid')">Lion_Squid - 17</button><br>
 <button onclick="showUser(event, 'Martz4040')">Martz4040 - ✅</button><br>
 <button onclick="showUser(event, 'mattigummi45')">mattigummi45 - 48</button><br>
-<button onclick="showUser(event, 'Meikoro')">Meikoro - 7</button><br>
+<button onclick="showUser(event, 'Meikoro')">Meikoro - 8</button><br>
 <button onclick="showUser(event, 'R1p3r_5000')">R1p3r_5000 - 49</button><br>
-<button onclick="showUser(event, 'Road2unner')">Road2unner - 13</button><br>
+<button onclick="showUser(event, 'Road2unner')">Road2unner - 15</button><br>
 <button onclick="showUser(event, 'Ryukori_')">Ryukori_ - 14</button><br>
 <button onclick="showUser(event, 'slammajamma28')">slammajamma28 - 18</button><br>
 <button onclick="showUser(event, 'staytrue1985')">staytrue1985 - 59</button><br>
@@ -3035,7 +3035,7 @@
 <tr><td>MISSING                                                                              </td><td>MISSING </td><td style="text-align: right;">       31</td></tr>
 <tr><td>MISSING                                                                              </td><td>MISSING </td><td style="text-align: right;">       32</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Meikoro/log?id=37259">37259</a></td><td>69.03   </td><td style="text-align: right;">       33</td></tr>
-<tr><td>MISSING                                                                              </td><td>MISSING </td><td style="text-align: right;">       34</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/Meikoro/log?id=37261">37261</a></td><td>70.15   </td><td style="text-align: right;">       34</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Meikoro/log?id=37255">37255</a></td><td>91.19   </td><td style="text-align: right;">       35</td></tr>
 <tr><td>MISSING                                                                              </td><td>MISSING </td><td style="text-align: right;">       36</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Meikoro/log?id=37257">37257</a></td><td>86.16   </td><td style="text-align: right;">       37</td></tr>
@@ -3137,7 +3137,7 @@
 <tr><th>Log#                                                                                    </th><th>Rarity  </th><th style="text-align: right;">  Seconds</th></tr>
 </thead>
 <tbody>
-<tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       00</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/Road2unner/log?id=19132">19132</a></td><td>23.32   </td><td style="text-align: right;">       00</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       01</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       02</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       03</td></tr>
@@ -3182,7 +3182,7 @@
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       42</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Road2unner/log?id=19117">19117</a></td><td>45.77   </td><td style="text-align: right;">       43</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       44</td></tr>
-<tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       45</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/Road2unner/log?id=19131">19131</a></td><td>28.33   </td><td style="text-align: right;">       45</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Road2unner/log?id=19129">19129</a></td><td>31.42   </td><td style="text-align: right;">       46</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Road2unner/log?id=19126">19126</a></td><td>18.69   </td><td style="text-align: right;">       47</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       48</td></tr>
