--- a/tracker.html
+++ b/tracker.html
@@ -6,8 +6,8 @@
 <script src='js/jquery.js'></script>
 <script src='js/script.js'></script>
 <img src="banner.png" alt="PST TIME EVENT">
-<h3 value="utc" onClick="swapTime(event)">as of 2023/05/08 08:25:33 PM UTC</h3>
-<h4>as of 2023/05/08 08:25:33 PM UTC</h3>
+<h3 value="utc" onClick="swapTime(event)">as of 2023/05/08 09:03:10 PM UTC</h3>
+<h4>as of 2023/05/08 09:03:10 PM UTC</h3>
 <div>Times are tracked and claimed automatically.<br>Post in the <a href='https://www.playstationtrophies.org/forum/topic/334336-wait-a-minute-~-discussion/'>discussion thread</a> if you see any discrepancies and for further rules.</div><br>
 <div id="goal-count"><table><thead><tr class='percentageFill'><th>Current</th><th>Remaining</th><th>Progress</th></tr></thead>
 <tbody><tr class='percentageFill'><td>1163</td><td>277</td><td id="goalPercentage">80.76%</td></tr></tbody></table></div><br>
@@ -1129,9 +1129,9 @@
 <tr><td>13:51 </td><td>stpatty         </td><td><a href="https://www.playstationtrophies.org/profiles/stpatty/log?id=12241">12241</a>         </td><td style="text-align: right;">   63.29</td></tr>
 <tr><td>13:52 </td><td>mattigummi45    </td><td><a href="https://www.playstationtrophies.org/profiles/mattigummi45/log?id=12798">12798</a>    </td><td style="text-align: right;">   15.7 </td></tr>
 <tr><td>13:54 </td><td>Ryukori_        </td><td><a href="https://www.playstationtrophies.org/profiles/Ryukori_/log?id=13741">13741</a>        </td><td style="text-align: right;">   44.87</td></tr>
-<tr><td>13:55 </td><td>mattigummi45    </td><td><a href="https://www.playstationtrophies.org/profiles/mattigummi45/log?id=12852">12852</a>    </td><td style="text-align: right;">   40.63</td></tr>
+<tr><td>13:55 </td><td>mattigummi45    </td><td><a href="https://www.playstationtrophies.org/profiles/mattigummi45/log?id=12852">12852</a>    </td><td style="text-align: right;">   40.66</td></tr>
 <tr><td>13:56 </td><td>THE--ALCHEMlST  </td><td><a href="https://www.playstationtrophies.org/profiles/THE--ALCHEMlST/log?id=23646">23646</a>  </td><td style="text-align: right;">   35.73</td></tr>
-<tr><td>13:57 </td><td>mattigummi45    </td><td><a href="https://www.playstationtrophies.org/profiles/mattigummi45/log?id=12855">12855</a>    </td><td style="text-align: right;">   29.74</td></tr>
+<tr><td>13:57 </td><td>mattigummi45    </td><td><a href="https://www.playstationtrophies.org/profiles/mattigummi45/log?id=12855">12855</a>    </td><td style="text-align: right;">   29.76</td></tr>
 <tr><td>13:58 </td><td>Dino_Roar       </td><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=139614">139614</a>     </td><td style="text-align: right;">   82.05</td></tr>
 <tr><td>13:59 </td><td>Dino_Roar       </td><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=139535">139535</a>     </td><td style="text-align: right;">   97.76</td></tr>
 <tr><td>14:00 </td><td>Dino_Roar       </td><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=139548">139548</a>     </td><td style="text-align: right;">  100   </td></tr>
@@ -1434,7 +1434,7 @@
 <tr><td>19:14 </td><td>Barra333        </td><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3684">3684</a>          </td><td style="text-align: right;">   68.07</td></tr>
 <tr><td>19:15 </td><td>Barra333        </td><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3637">3637</a>          </td><td style="text-align: right;">   57.58</td></tr>
 <tr><td>19:16 </td><td>clayser         </td><td><a href="https://www.playstationtrophies.org/profiles/clayser/log?id=9942">9942</a>           </td><td style="text-align: right;">   16.41</td></tr>
-<tr><td>19:17 </td><td>daco_1979       </td><td><a href="https://www.playstationtrophies.org/profiles/daco_1979/log?id=31264">31264</a>       </td><td style="text-align: right;">   99.06</td></tr>
+<tr><td>19:17 </td><td>daco_1979       </td><td><a href="https://www.playstationtrophies.org/profiles/daco_1979/log?id=31264">31264</a>       </td><td style="text-align: right;">   99.07</td></tr>
 <tr><td>19:19 </td><td>Barra333        </td><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3707">3707</a>          </td><td style="text-align: right;">   67.62</td></tr>
 <tr><td>19:20 </td><td>Barra333        </td><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3708">3708</a>          </td><td style="text-align: right;">   67.68</td></tr>
 <tr><td>19:21 </td><td>stpatty         </td><td><a href="https://www.playstationtrophies.org/profiles/stpatty/log?id=12235">12235</a>         </td><td style="text-align: right;">   58.16</td></tr>
@@ -1514,7 +1514,7 @@
 <tr><td>20:43 </td><td>clayser         </td><td><a href="https://www.playstationtrophies.org/profiles/clayser/log?id=9944">9944</a>           </td><td style="text-align: right;">   16.23</td></tr>
 <tr><td>20:45 </td><td>Xemik           </td><td><a href="https://www.playstationtrophies.org/profiles/Xemik/log?id=27248">27248</a>           </td><td style="text-align: right;">   34   </td></tr>
 <tr><td>20:46 </td><td>Lion_Squid      </td><td><a href="https://www.playstationtrophies.org/profiles/Lion_Squid/log?id=12858">12858</a>      </td><td style="text-align: right;">   52.07</td></tr>
-<tr><td>20:47 </td><td>Darth_Krid      </td><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30451">30451</a>      </td><td style="text-align: right;">   99.9 </td></tr>
+<tr><td>20:47 </td><td>Jerry_Appleby   </td><td><a href="https://www.playstationtrophies.org/profiles/Jerry_Appleby/log?id=32588">32588</a>   </td><td style="text-align: right;">   30.41</td></tr>
 <tr><td>20:48 </td><td>lion1325478     </td><td><a href="https://www.playstationtrophies.org/profiles/lion1325478/log?id=11981">11981</a>     </td><td style="text-align: right;">   40.03</td></tr>
 <tr><td>20:49 </td><td>Darth_Krid      </td><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30324">30324</a>      </td><td style="text-align: right;">   15.61</td></tr>
 <tr><td>20:50 </td><td>Darth_Krid      </td><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30450">30450</a>      </td><td style="text-align: right;">   72.01</td></tr>
@@ -1704,10 +1704,10 @@
 <tr><td>wrestlefanatic77</td><td style="text-align: right;">     51</td></tr>
 <tr><td>mattigummi45    </td><td style="text-align: right;">     49</td></tr>
 <tr><td>Barra333        </td><td style="text-align: right;">     49</td></tr>
-<tr><td>Darth_Krid      </td><td style="text-align: right;">     46</td></tr>
+<tr><td>Darth_Krid      </td><td style="text-align: right;">     45</td></tr>
 <tr><td>XxDecieverxX    </td><td style="text-align: right;">     41</td></tr>
+<tr><td>Jerry_Appleby   </td><td style="text-align: right;">     40</td></tr>
 <tr><td>THE--ALCHEMlST  </td><td style="text-align: right;">     40</td></tr>
-<tr><td>Jerry_Appleby   </td><td style="text-align: right;">     39</td></tr>
 <tr><td>ejesbd          </td><td style="text-align: right;">     37</td></tr>
 <tr><td>Zetberg         </td><td style="text-align: right;">     26</td></tr>
 <tr><td>Hemming87       </td><td style="text-align: right;">     25</td></tr>
@@ -1749,7 +1749,7 @@
 <button onclick="showUser(event, 'ejesbd')">ejesbd - 40</button><br>
 <button onclick="showUser(event, 'Eticket109')">Eticket109 - 9</button><br>
 <button onclick="showUser(event, 'Hemming87')">Hemming87 - 33</button><br>
-<button onclick="showUser(event, 'Jerry_Appleby')">Jerry_Appleby - 36</button><br>
+<button onclick="showUser(event, 'Jerry_Appleby')">Jerry_Appleby - 37</button><br>
 <button onclick="showUser(event, 'lion1325478')">lion1325478 - 26</button><br>
 <button onclick="showUser(event, 'Lion_Squid')">Lion_Squid - 17</button><br>
 <button onclick="showUser(event, 'Martz4040')">Martz4040 - ✅</button><br>
@@ -2695,7 +2695,7 @@
 <tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       30</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Jerry_Appleby/log?id=32552">32552</a></td><td>21.15   </td><td style="text-align: right;">       31</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Jerry_Appleby/log?id=32575">32575</a></td><td>48.82   </td><td style="text-align: right;">       32</td></tr>
-<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       33</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/Jerry_Appleby/log?id=32588">32588</a></td><td>30.41   </td><td style="text-align: right;">       33</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Jerry_Appleby/log?id=32540">32540</a></td><td>11.29   </td><td style="text-align: right;">       34</td></tr>
 <tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       35</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Jerry_Appleby/log?id=32543">32543</a></td><td>30.08   </td><td style="text-align: right;">       36</td></tr>
@@ -2956,7 +2956,7 @@
 <tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       19</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/mattigummi45/log?id=12828">12828</a></td><td>18.32   </td><td style="text-align: right;">       20</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/mattigummi45/log?id=12787">12787</a></td><td>66.62   </td><td style="text-align: right;">       21</td></tr>
-<tr><td><a href="https://www.playstationtrophies.org/profiles/mattigummi45/log?id=12852">12852</a></td><td>40.63   </td><td style="text-align: right;">       22</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/mattigummi45/log?id=12852">12852</a></td><td>40.66   </td><td style="text-align: right;">       22</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/mattigummi45/log?id=12824">12824</a></td><td>19.54   </td><td style="text-align: right;">       23</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/mattigummi45/log?id=12826">12826</a></td><td>13.03   </td><td style="text-align: right;">       24</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/mattigummi45/log?id=12791">12791</a></td><td>26.31   </td><td style="text-align: right;">       25</td></tr>
@@ -2982,7 +2982,7 @@
 <tr><td><a href="https://www.playstationtrophies.org/profiles/mattigummi45/log?id=12800">12800</a></td><td>16.06   </td><td style="text-align: right;">       45</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/mattigummi45/log?id=12816">12816</a></td><td>13.40   </td><td style="text-align: right;">       46</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/mattigummi45/log?id=12797">12797</a></td><td>26.96   </td><td style="text-align: right;">       47</td></tr>
-<tr><td><a href="https://www.playstationtrophies.org/profiles/mattigummi45/log?id=12853">12853</a></td><td>30.27   </td><td style="text-align: right;">       48</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/mattigummi45/log?id=12853">12853</a></td><td>30.29   </td><td style="text-align: right;">       48</td></tr>
 <tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       49</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/mattigummi45/log?id=12849">12849</a></td><td>66.02   </td><td style="text-align: right;">       50</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/mattigummi45/log?id=12789">12789</a></td><td>58.61   </td><td style="text-align: right;">       51</td></tr>
@@ -2992,7 +2992,7 @@
 <tr><td><a href="https://www.playstationtrophies.org/profiles/mattigummi45/log?id=12825">12825</a></td><td>18.87   </td><td style="text-align: right;">       55</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/mattigummi45/log?id=12840">12840</a></td><td>13.27   </td><td style="text-align: right;">       56</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/mattigummi45/log?id=12836">12836</a></td><td>11.33   </td><td style="text-align: right;">       57</td></tr>
-<tr><td><a href="https://www.playstationtrophies.org/profiles/mattigummi45/log?id=12855">12855</a></td><td>29.74   </td><td style="text-align: right;">       58</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/mattigummi45/log?id=12855">12855</a></td><td>29.76   </td><td style="text-align: right;">       58</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/mattigummi45/log?id=12833">12833</a></td><td>13.92   </td><td style="text-align: right;">       59</td></tr>
 </tbody>
 </table></div>
@@ -3164,7 +3164,7 @@
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       23</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       24</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       25</td></tr>
-<tr><td><a href="https://www.playstationtrophies.org/profiles/Road2unner/log?id=19122">19122</a></td><td>31.36   </td><td style="text-align: right;">       26</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/Road2unner/log?id=19135">19135</a></td><td>30.21   </td><td style="text-align: right;">       26</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       27</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       28</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Road2unner/log?id=19127">19127</a></td><td>29.84   </td><td style="text-align: right;">       29</td></tr>
